Adding Interface classes for extendibility

--- a/RationalBezier/RationalBezier.vcxproj
+++ b/RationalBezier/RationalBezier.vcxproj
@@ -131,6 +131,8 @@
     <ClCompile Include="main.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="BezierCurve.h" />
+    <ClInclude Include="ICurve.h" />
     <ClInclude Include="RationalBezierCurve.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
